Clustering UI: make next button blue, fix size/spacing a bit

--- a/client/src/components/Algorithms/algorithmStyles.scss
+++ b/client/src/components/Algorithms/algorithmStyles.scss
@@ -156,12 +156,10 @@
         width: 50%;
 
         .action-buttons {
-            text-align: center;
-
-            button {
-                width: 150px;
-            }
+            text-align: right;
+            margin-right: 2em;
         }
+        
     }
 
     .params {
